-
Bug
-
Resolution: Fixed
-
P4
-
11, 12, 13, 14
-
b23
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246462 | 13.0.4 | Tobias Hartmann | P4 | Resolved | Fixed | b04 |
| JDK-8233992 | 11.0.7-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
| JDK-8237342 | 11.0.7 | Tobias Hartmann | P4 | Resolved | Fixed | b01 |
JDK 14 CI test failure:
vmTestbase/vm/mlvm/meth/stress/compiler/deoptimize/Test.java#id1
#
# A fatal error has been detected by the Java Runtime Environment:
#
# EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffa18130c97, pid=137924, tid=142928
#
# JRE version: Java(TM) SE Runtime Environment (14.0+22) (fastdebug build 14-ea+22-940)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+22-940, compiled mode, sharing, tiered, compressed oops, g1 gc, windows-amd64)
# Problematic frame:
# V [jvm.dll+0xb90c97] AdapterHandlerLibrary::get_adapter+0x207
#
# Core dump will be written. Default location: T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\scratch\1\hs_err_pid137924.mdmp
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.class.path.prefix=T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize\Test_id1.d;C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize;T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase;T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\test\lib -Dtest.src=C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize -Dtest.src.path=C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize;C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg\vmTestbase;C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\lib -Dtest.classes=T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize\Test_id1.d -Dtest.class.path=T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize\Test_id1.d;T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase;T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\test\lib -Dtest.vm.opts=-XX:MaxRAMPercentage=3 -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=3 -Dtest.compiler.opts= -Dtest.java.opts=-Xcomp -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:+TieredCompilation -XX:+DeoptimizeALot -Dtest.jdk=c:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\windows-x64-debug.jdk\jdk-14\fastdebug -Dcompile.jdk=c:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\windows-x64-debug.jdk\jdk-14\fastdebug -Dtest.timeout.factor=10.0 -Dtest.root=C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg -Dtest.nativepath=c:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\windows-x64-debug.test\hotspot\jtreg\native -XX:MaxRAMPercentage=3 -Xcomp -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+TieredCompilation -XX:+DeoptimizeALot -Djava.library.path=c:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\windows-x64-debug.test\hotspot\jtreg\native -XX:ReservedCodeCacheSize=100m com.sun.javatest.regtest.agent.MainWrapper T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize\Test_id1.d\main.0.jta -threadsPerCpu 2 -threadsExtra 2
Host: inst-7iepi-Win2, AMD EPYC 7551 32-Core Processor , 16 cores, 63G, Windows Server 2012 R2 , 64 bit Build 9600 (6.3.9600.19358)
Time: Sat Nov 2 03:11:18 2019 /GM elapsed time: 271 seconds (0d 0h 4m 31s)
--------------- T H R E A D ---------------
Current thread (0x0000004d4bf6d000): JavaThread "Thread-18" [_thread_in_vm, id=142928, stack(0x0000004d50080000,0x0000004d50180000)]
Stack: [0x0000004d50080000,0x0000004d50180000], sp=0x0000004d5017de30, free space=1015k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xb90c97] AdapterHandlerLibrary::get_adapter+0x207 (sharedruntime.cpp:2628)
V [jvm.dll+0xa5abe1] Method::make_adapters+0x21 (method.cpp:1211)
V [jvm.dll+0xa5a48b] Method::link_method+0x27b (method.cpp:1205)
V [jvm.dll+0xa5e0a4] Method::restore_unshareable_info+0xd4 (method.cpp:1240)
V [jvm.dll+0x6b9295] InstanceKlass::restore_unshareable_info+0x105 (instanceklass.cpp:2398)
V [jvm.dll+0xc37b26] SystemDictionary::load_shared_class+0x326 (systemdictionary.cpp:1336)
V [jvm.dll+0xc3752e] SystemDictionary::load_instance_class+0x1ae (systemdictionary.cpp:1448)
V [jvm.dll+0xc3970f] SystemDictionary::resolve_instance_class_or_null+0x89f (systemdictionary.cpp:848)
V [jvm.dll+0xc39bcc] SystemDictionary::resolve_or_fail+0x4c (systemdictionary.cpp:196)
V [jvm.dll+0x4f5479] ConstantPool::klass_at_impl+0x3a9 (constantpool.cpp:498)
V [jvm.dll+0x6c826a] InterpreterRuntime::_new+0xca (interpreterruntime.cpp:230)
C 0x0000004d3b32c32c
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j java.util.Formatter.parse(Ljava/lang/String;)Ljava/util/List;+81 java.base@14-ea
j java.util.Formatter.format(Ljava/util/Locale;Ljava/lang/String;[Ljava/lang/Object;)Ljava/util/Formatter;+12 java.base@14-ea
j java.util.Formatter.format(Ljava/lang/String;[Ljava/lang/Object;)Ljava/util/Formatter;+7 java.base@14-ea
j java.lang.String.format(Ljava/lang/String;[Ljava/lang/Object;)Ljava/lang/String;+9 java.base@14-ea
j nsk.share.test.LazyFormatString.toString()Ljava/lang/String;+8
J 23449 c2 java.lang.String.valueOf(Ljava/lang/Object;)Ljava/lang/String; java.base@14-ea (15 bytes) @ 0x0000004d3d075e38 [0x0000004d3d075a20+0x0000000000000418]
j java.io.PrintWriter.println(Ljava/lang/Object;)V+1 java.base@14-ea
j nsk.share.Log.printExceptionToString(Ljava/lang/Object;Ljava/lang/Throwable;)Ljava/lang/String;+19
j nsk.share.Log.complain(Ljava/lang/Object;Ljava/lang/Throwable;)V+7
j vm.mlvm.share.Env.complain(Ljava/lang/Throwable;Ljava/lang/String;[Ljava/lang/Object;)V+13
j vm.mlvm.share.MultiThreadedTest.lambda$run$1(Ljava/util/concurrent/CyclicBarrier;I)V+54
J 4212 c1 vm.mlvm.share.MultiThreadedTest$$Lambda$6.run()V (16 bytes) @ 0x0000004d3be01404 [0x0000004d3be01300+0x0000000000000104]
J 2146 c1 java.lang.Thread.run()V java.base@14-ea (17 bytes) @ 0x0000004d3bbffaac [0x0000004d3bbff9e0+0x00000000000000cc]
v ~StubRoutines::call_stub
siginfo: EXCEPTION_ACCESS_VIOLATION (0xc0000005), reading address 0x0000000000000028
...............
vmTestbase/vm/mlvm/meth/stress/compiler/deoptimize/Test.java#id1
#
# A fatal error has been detected by the Java Runtime Environment:
#
# EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x00007ffa18130c97, pid=137924, tid=142928
#
# JRE version: Java(TM) SE Runtime Environment (14.0+22) (fastdebug build 14-ea+22-940)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+22-940, compiled mode, sharing, tiered, compressed oops, g1 gc, windows-amd64)
# Problematic frame:
# V [jvm.dll+0xb90c97] AdapterHandlerLibrary::get_adapter+0x207
#
# Core dump will be written. Default location: T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\scratch\1\hs_err_pid137924.mdmp
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Dtest.class.path.prefix=T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize\Test_id1.d;C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize;T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase;T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\test\lib -Dtest.src=C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize -Dtest.src.path=C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize;C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg\vmTestbase;C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\lib -Dtest.classes=T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize\Test_id1.d -Dtest.class.path=T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize\Test_id1.d;T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\vmTestbase;T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\classes\5\test\lib -Dtest.vm.opts=-XX:MaxRAMPercentage=3 -Dtest.tool.vm.opts=-J-XX:MaxRAMPercentage=3 -Dtest.compiler.opts= -Dtest.java.opts=-Xcomp -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -server -XX:+TieredCompilation -XX:+DeoptimizeALot -Dtest.jdk=c:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\windows-x64-debug.jdk\jdk-14\fastdebug -Dcompile.jdk=c:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\windows-x64-debug.jdk\jdk-14\fastdebug -Dtest.timeout.factor=10.0 -Dtest.root=C:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\src.full\open\test\hotspot\jtreg -Dtest.nativepath=c:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\windows-x64-debug.test\hotspot\jtreg\native -XX:MaxRAMPercentage=3 -Xcomp -XX:+CreateCoredumpOnCrash -ea -esa -XX:CompileThreshold=100 -XX:+UnlockExperimentalVMOptions -XX:+TieredCompilation -XX:+DeoptimizeALot -Djava.library.path=c:\ade\mesos\work_dir\jib-master\install\jdk-14+22-940\windows-x64-debug.test\hotspot\jtreg\native -XX:ReservedCodeCacheSize=100m com.sun.javatest.regtest.agent.MainWrapper T:\testoutput\test-support\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_mlvm\vmTestbase\vm\mlvm\meth\stress\compiler\deoptimize\Test_id1.d\main.0.jta -threadsPerCpu 2 -threadsExtra 2
Host: inst-7iepi-Win2, AMD EPYC 7551 32-Core Processor , 16 cores, 63G, Windows Server 2012 R2 , 64 bit Build 9600 (6.3.9600.19358)
Time: Sat Nov 2 03:11:18 2019 /GM elapsed time: 271 seconds (0d 0h 4m 31s)
--------------- T H R E A D ---------------
Current thread (0x0000004d4bf6d000): JavaThread "Thread-18" [_thread_in_vm, id=142928, stack(0x0000004d50080000,0x0000004d50180000)]
Stack: [0x0000004d50080000,0x0000004d50180000], sp=0x0000004d5017de30, free space=1015k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xb90c97] AdapterHandlerLibrary::get_adapter+0x207 (sharedruntime.cpp:2628)
V [jvm.dll+0xa5abe1] Method::make_adapters+0x21 (method.cpp:1211)
V [jvm.dll+0xa5a48b] Method::link_method+0x27b (method.cpp:1205)
V [jvm.dll+0xa5e0a4] Method::restore_unshareable_info+0xd4 (method.cpp:1240)
V [jvm.dll+0x6b9295] InstanceKlass::restore_unshareable_info+0x105 (instanceklass.cpp:2398)
V [jvm.dll+0xc37b26] SystemDictionary::load_shared_class+0x326 (systemdictionary.cpp:1336)
V [jvm.dll+0xc3752e] SystemDictionary::load_instance_class+0x1ae (systemdictionary.cpp:1448)
V [jvm.dll+0xc3970f] SystemDictionary::resolve_instance_class_or_null+0x89f (systemdictionary.cpp:848)
V [jvm.dll+0xc39bcc] SystemDictionary::resolve_or_fail+0x4c (systemdictionary.cpp:196)
V [jvm.dll+0x4f5479] ConstantPool::klass_at_impl+0x3a9 (constantpool.cpp:498)
V [jvm.dll+0x6c826a] InterpreterRuntime::_new+0xca (interpreterruntime.cpp:230)
C 0x0000004d3b32c32c
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j java.util.Formatter.parse(Ljava/lang/String;)Ljava/util/List;+81 java.base@14-ea
j java.util.Formatter.format(Ljava/util/Locale;Ljava/lang/String;[Ljava/lang/Object;)Ljava/util/Formatter;+12 java.base@14-ea
j java.util.Formatter.format(Ljava/lang/String;[Ljava/lang/Object;)Ljava/util/Formatter;+7 java.base@14-ea
j java.lang.String.format(Ljava/lang/String;[Ljava/lang/Object;)Ljava/lang/String;+9 java.base@14-ea
j nsk.share.test.LazyFormatString.toString()Ljava/lang/String;+8
J 23449 c2 java.lang.String.valueOf(Ljava/lang/Object;)Ljava/lang/String; java.base@14-ea (15 bytes) @ 0x0000004d3d075e38 [0x0000004d3d075a20+0x0000000000000418]
j java.io.PrintWriter.println(Ljava/lang/Object;)V+1 java.base@14-ea
j nsk.share.Log.printExceptionToString(Ljava/lang/Object;Ljava/lang/Throwable;)Ljava/lang/String;+19
j nsk.share.Log.complain(Ljava/lang/Object;Ljava/lang/Throwable;)V+7
j vm.mlvm.share.Env.complain(Ljava/lang/Throwable;Ljava/lang/String;[Ljava/lang/Object;)V+13
j vm.mlvm.share.MultiThreadedTest.lambda$run$1(Ljava/util/concurrent/CyclicBarrier;I)V+54
J 4212 c1 vm.mlvm.share.MultiThreadedTest$$Lambda$6.run()V (16 bytes) @ 0x0000004d3be01404 [0x0000004d3be01300+0x0000000000000104]
J 2146 c1 java.lang.Thread.run()V java.base@14-ea (17 bytes) @ 0x0000004d3bbffaac [0x0000004d3bbff9e0+0x00000000000000cc]
v ~StubRoutines::call_stub
siginfo: EXCEPTION_ACCESS_VIOLATION (0xc0000005), reading address 0x0000000000000028
...............
- backported by
-
JDK-8233992 Crash in AdapterHandlerLibrary::get_adapter with CDS due to code cache exhaustion
-
- Resolved
-
-
JDK-8237342 Crash in AdapterHandlerLibrary::get_adapter with CDS due to code cache exhaustion
-
- Resolved
-
-
JDK-8246462 Crash in AdapterHandlerLibrary::get_adapter with CDS due to code cache exhaustion
-
- Resolved
-
- relates to
-
JDK-8058176 [mlvm] tests should not allow code cache exhaustion
-
- Resolved
-