8233491: Crash in AdapterHandlerLibrary::get_adapter with CDS due to code cache exhaustion

Added null check.

Reviewed-by: kvn, iklam